Bug 305146 - Tasks and events results titles are truncated in the search window
Summary: Tasks and events results titles are truncated in the search window
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-14 16:13 UTC by Alexandre Bonneau
Modified: 2013-11-03 22:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Bonneau 2012-08-14 16:13:36 UTC
When using ctrl+F to search for event/task, the tasks and events results titles are truncated in the search window after ~38 characters with the "..." string, no matter how large the column is.

Reproducible: Always



Expected Results:  
The task and event titles should be correctly displayed if the column is large enough.
Comment 1 Allen Winter 2013-11-03 22:14:02 UTC
Git commit 38075b3e4451bebe788038144690176d9ad97f0f by Allen Winter.
Committed on 03/11/2013 at 22:12.
Pushed by winterz into branch 'KDE/4.11'.

don't chop-off the summary at 37chars in the treewidget column
FIXED-IN: 4.11.4

M  +30   -27   calendarviews/list/listview.cpp

http://commits.kde.org/kdepim/38075b3e4451bebe788038144690176d9ad97f0f
Comment 2 Allen Winter 2013-11-03 22:18:12 UTC
Git commit d0783472e802e93061908ec1eecc9599f0b732dc by Allen Winter.
Committed on 03/11/2013 at 22:12.
Pushed by winterz into branch 'master'.

don't chop-off the summary at 37chars in the treewidget column
FIXED-IN: 4.11.4

M  +48   -12   calendarviews/list/listview.cpp

http://commits.kde.org/kdepim/d0783472e802e93061908ec1eecc9599f0b732dc