don't chop-off the summary at 37chars in the treewidget column

BUG: 305146
FIXED-IN: 4.11.4