calendarviews/list/listview.cpp
@@ -3,7 +3,7 @@
   Copyright (c) 2000,2001 Cornelius Schumacher <schumacher@kde.org>
   Copyright (c) 2003-2004 Reinhold Kainhofer <reinhold@kainhofer.com>
   Copyright (c) 2010 Sérgio Martins <iamsergio@gmail.com>
-  Copyright (c) 2012 Allen Winter <winter@kde.org>
+  Copyright (c) 2012-2013 Allen Winter <winter@kde.org>
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -25,18 +25,19 @@
 */
 
 //TODO: put a reminder and/or recurs icon on the item?
-// remove customlistitem.h
 
 #include "listview.h"
 #include "helper.h"
 
-#include <Akonadi/Calendar/ETMCalendar>
-#include <Akonadi/Calendar/IncidenceChanger>
 #include <calendarsupport/kcalprefs.h>
 #include <calendarsupport/utils.h>
 
+#include <Akonadi/Calendar/ETMCalendar>
+#include <Akonadi/Calendar/IncidenceChanger>
+
 #include <KCalUtils/IncidenceFormatter>
 #include <KCalCore/Visitor>
+
 #include <KIconLoader>
 
 #include <QBoxLayout>
@@ -57,16 +58,9 @@ enum {
 
 static QString cleanSummary( const QString &summary, const KDateTime &next )
 {
-  static QString etc = i18nc( "@label an elipsis", "..." );
-  int maxLen = 40;
-
   QString retStr = summary;
-  retStr.replace( '\n', ' ' );
-  if ( retStr.length() > maxLen ) {
-    maxLen -= etc.length();
-    retStr = retStr.left( maxLen );
-    retStr += etc;
-  }
+  retStr.replace( QLatin1Char( '\n' ), QLatin1Char( ' ' ) );
+
   if ( next.isValid() ) {
     const QString dateStr =
       KGlobal::locale()->formatDate(
@@ -186,10 +180,10 @@ class ListView::Private::ListItemVisitor : public KCalCore::Visitor
 bool ListView::Private::ListItemVisitor::visit( Event::Ptr e )
 {
   QPixmap eventPxmp;
-  if ( e->customProperty( "KABC", "ANNIVERSARY" ) == "YES" ) {
-    eventPxmp = cachedSmallIcon( "view-calendar-wedding-anniversary" );
-  } else if ( e->customProperty( "KABC", "BIRTHDAY" ) == "YES" ) {
-    eventPxmp = cachedSmallIcon( "view-calendar-birthday" );
+  if ( e->customProperty( "KABC", "ANNIVERSARY" ) == QLatin1String( "YES" ) ) {
+    eventPxmp = cachedSmallIcon( QLatin1String( "view-calendar-wedding-anniversary" ) );
+  } else if ( e->customProperty( "KABC", "BIRTHDAY" ) == QLatin1String( "YES" ) ) {
+    eventPxmp = cachedSmallIcon( QLatin1String( "view-calendar-birthday" ) );
   } else {
     eventPxmp = cachedSmallIcon( e->iconName() );
   }
@@ -234,7 +228,7 @@ bool ListView::Private::ListItemVisitor::visit( Todo::Ptr t )
                       t->dateTime( Incidence::RoleDisplayStart ), t->allDay(), true,
                       CalendarSupport::KCalPrefs::instance()->timeSpec() ) );
   } else {
-    mItem->setText( StartDateTime_Column, "---" );
+    mItem->setText( StartDateTime_Column, QLatin1String( "---" ) );
   }
 
   if ( t->hasDueDate() ) {
@@ -243,7 +237,7 @@ bool ListView::Private::ListItemVisitor::visit( Todo::Ptr t )
                       CalendarSupport::KCalPrefs::instance()->timeSpec() ) );
 
   } else {
-    mItem->setText( EndDateTime_Column, "---" );
+    mItem->setText( EndDateTime_Column, QLatin1String( "---" ) );
   }
   mItem->setText( Categories_Column, t->categoriesStr() );
 
@@ -256,7 +250,7 @@ bool ListView::Private::ListItemVisitor::visit( Journal::Ptr j )
   mItem->setIcon( Summary_Column, jrnalPxmp );
   if ( j->summary().isEmpty() ) {
     mItem->setText( Summary_Column,
-                    cleanSummary( j->description().section( '\n', 0, 0 ),
+                    cleanSummary( j->description().section( QLatin1Char( '\n' ), 0, 0 ),
                                   KDateTime() ) );
   } else {
     mItem->setText( Summary_Column, cleanSummary( j->summary(), KDateTime() ) );
@@ -337,7 +331,14 @@ DateList ListView::selectedIncidenceDates() const
 
 void ListView::updateView()
 {
-  for ( int col = 0; col < Dummy_EOF_Column; ++col ) {
+  static int maxLen = 38;
+
+  /* Set the width of the summary column to show 'maxlen' chars, at most */
+  int width = qMin( maxLen * fontMetrics().averageCharWidth(), maxLen * 12 );
+  width += 24; //for the icon
+
+  d->mTreeWidget->setColumnWidth( Summary_Column, width );
+  for ( int col = StartDateTime_Column; col < Dummy_EOF_Column; ++col ) {
     d->mTreeWidget->resizeColumnToContents( col );
   }
   d->mTreeWidget->sortItems( StartDateTime_Column, Qt::DescendingOrder );
@@ -399,27 +400,29 @@ void ListView::Private::addIncidence( const Akonadi::ETMCalendar::Ptr &calendar,
   Q_ASSERT( calendar );
   if ( item.isValid() && item.hasPayload<KCalCore::Incidence::Ptr>() ) {
     addIncidence( calendar, item.payload<KCalCore::Incidence::Ptr>(), date );
-  }  
+  }
 }
 
 void ListView::Private::addIncidence( const Akonadi::ETMCalendar::Ptr &calendar,
                                       const KCalCore::Incidence::Ptr &incidence,
                                       const QDate &date )
 {
-  
-  if ( !incidence )
+  if ( !incidence ) {
     return;
+  }
 
   Akonadi::Item aitem = calendar->item( incidence );
 
-  if ( !aitem.isValid() || mItems.contains( aitem.id() ) )
+  if ( !aitem.isValid() || mItems.contains( aitem.id() ) ) {
     return;
+  }
+
   mDateList.insert( aitem.id(), date );
   mItems.insert( aitem.id(), aitem );
   Incidence::Ptr tinc = incidence;
 
-  if ( tinc->customProperty( "KABC", "BIRTHDAY" ) == "YES" ||
-       tinc->customProperty( "KABC", "ANNIVERSARY" ) == "YES" ) {
+  if ( tinc->customProperty( "KABC", "BIRTHDAY" ) == QLatin1String( "YES" ) ||
+       tinc->customProperty( "KABC", "ANNIVERSARY" ) == QLatin1String( "YES" ) ) {
     const int years = EventViews::yearDiff( tinc->dtStart().date(), mEndDate );
     if ( years > 0 ) {
       tinc = Incidence::Ptr( incidence->clone() );
